<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">


    <TextView
        android:id="@+id/txt_header"
        android:layout_width="344dp"
        android:layout_height="44dp"
        android:layout_marginBottom="48dp"
        android:text="@string/text_header"
        app:layout_constraintBottom_toTopOf="@+id/username_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="384dp"
        android:layout_height="45dp"
        android:hint="@string/input_user"
        app:layout_constraintBottom_toTopOf="@+id/password_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="384dp"
        android:layout_height="45dp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/txt_forgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_forgotPassword"
        android:layout_width="384dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="322dp"
        android:layout_height="49dp"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="478dp" />
    <!-- TODO: Update blank fragment layout -->
</androidx.constraintlayout.widget.ConstraintLayout>